traefik-dashboard-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dashboard-strip
  namespace: kube-system
spec:
  stripPrefix:
    prefixes:
    - /dashboard/
    - /dashboard
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: kube-system
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-dashboard-strip@kubernetescrd # References the middleware
spec:
  ingressClassName: traefik
  rules:
  - host: traefik.init0xff.com
    http:
      paths:
      - path: /dashboard/
        pathType: Prefix
        backend:
          service:
            name: traefik
            port:
              name: traefik # 9000
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: traefik
            port:
              name: traefik
